Intermediate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: genai-bot-service
spec:
  type: NodePort  # Change to LoadBalancer for cloud providers
  selector:
    app: genai-bot
  ports:
    - port: 8501
      targetPort: 8501
      nodePort: 30007  # Only for NodePort type
